--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
-    font-family: "Centrury Gothic", sans-serif;
-  }
+  font-family: "Gill Sans", sans-serif;  }
   
   input[type="text"] {
     width: 200px;
