--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-  font-family: "Gill Sans", sans-serif;  }
+  font-family: "Gill Sans", sans-serif;  
+}
   
   input[type="text"] {
     width: 200px;
