--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 body {
   font-family: "Gill Sans", sans-serif;  
 }
-  
+h1 {
+  font-size: 24px;
+}
+
+p {
+  font-size: 18px;
+}
   input[type="text"] {
     width: 200px;
     padding: 5px;
